# url-shortener-rust

./: Cargo.toml
src/: lib.rs  main.rs
src/routes/: encode_link.rs  mod.rs
tests/: encode_link.rs  greet.rs  health_check.rs
tests/test_utils/: mod.rs  spawn_app.rs
