[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"
authors = ["Alvi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "url-shortener"

[dependencies]
actix-web = "=4.0.0-beta.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11" }

[dev-dependencies]
rstest = "0.12.0"

